# TinyEKF

./: CMakeLists.txt
examples/gps/: gps_ekf.c
src/: tiny_ekf.c  tiny_ekf.h
